--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <span>Follow us</span>
                             <div class="social-icon">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
                                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
                                 <a href="#"><i class="fab fa-instagram"></i></a>
                             </div>
@@ -215,9 +215,9 @@
                                     <a href="project.html" class="theme-btn wow fadeInUp" data-wow-delay=".5s">view portfolio <i class="fa-solid fa-arrow-up-right"></i></a>
                                     <div class="social-link wow fadeInUp" data-wow-delay=".7s">
                                         <a href="#">Facebook</a>
-                                        <a href="#">Twitter</a>
+                                        <a href="#">instagram</a>
                                         <a href="#">Linkedin</a>
-                                        <a href="#">Dribbble</a>
+                                        <a href="#">behance</a>
                                     </div>
                                 </div>
                             </div>
@@ -977,6 +977,7 @@
                         <div class="col-xl-6 col-lg-6 col-md-6">
                             <div class="project-box-items design-choose-item-1">
                                 <div class="thumb">
+                                     <a href="https://www.behance.net/gallery/235377777/Social-Media-Wesselni" target="_blank" class="thumb-link">
                                     <img src="assets/img/home-1/project/project-04.jpg" alt="img">
                                     <div class="content">
                                         <p>App / Development </p>
@@ -1478,9 +1479,9 @@
                         </div>
                         <div class="icon-items">
                             <a href="#" class="icon">
-                                <i class="fa-brands fa-twitter"></i>
+                                <i class="fa-brands fa-instagram"></i>
                             </a>
-                            <a href="#">Twitter</a>
+                            <a href="#">instagram</a>
                         </div>
                         <div class="icon-items">
                             <a href="#" class="icon">
