--- a/contact.html
+++ b/contact.html
@@ -400,7 +400,11 @@
                                   });
                               });
                             </script>
-
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <div class="contact-inner-section">
             <div class="container">
                 <div class="googpemap-2">
