--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                 </div>
                
                             </div>
-                            <a href="contact.html" class="theme-btn">Hire Me <i class="fa-solid fa-arrow-up-right"></i></a>
+                            <a href="contact.html" class="theme-btn">Contact Us <i class="fa-solid fa-arrow-up-right"></i></a>
                             <div class="header__hamburger my-auto">
                                 <div class="sidebar__toggle">
                                     <img src="assets/img/bar.svg" alt="img">
@@ -1122,7 +1122,7 @@
                         <p class="wow fadeInUp" data-wow-delay=".3s">Then you’re in the right place. Get the best designs you’re <br> looking for. Just reach out and let me know!</p>
                         <div class="cta-btn wow fadeInUp" data-wow-delay=".5s">
                             <a href="tel:01626479559" class="theme-btn">chat on whatsapp <i class="fa-solid fa-arrow-up-right"></i></a>
-                            <a href="contact.html" class="theme-btn">hire me <i class="fa-solid fa-arrow-up-right"></i></a>
+                            <a href="contact.html" class="theme-btn">Contact Us <i class="fa-solid fa-arrow-up-right"></i></a>
                         </div>
                     </div>
                 </div>
