--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
        
         <!-- Project Section Start -->
         <section class="project-section-3 fix section-padding pt-0">
-                    <div class="pin-spacer" style="order: 0; place-self: auto; grid-area: auto; z-index: auto; float: none; flex-shrink: 1; display: block; margin: 0px; inset: auto; position: relative; flex-basis: auto; overflow: visible; box-sizing: border-box; width: 663px; height: 208px; padding: 0px;"><div class="section-title-2 mb-0 text-center tp-project-5-2-title" style="translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; inset: 0px auto auto 0px; margin: 0px; max-width: 663px; width: 663px; max-height: 208.203px; height: 208.203px; padding: 0px; transform: scale(0.6, 0.6);">
+                    <div class="pin-spacer" style="order: 0; place-self: auto; grid-area: auto; z-index: auto; float: none; flex-shrink: 1; display: block; margin: 0px; inset: auto; position: relative; flex-basis: auto; overflow: visible; box-sizing: border-box; width: 100%; height: 250px; padding: 0px;"><div class="section-title-2 mb-0 text-center tp-project-5-2-title" style="translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; inset: 0px auto auto 0px; margin: 0px; max-width: 100%; width: 100%; max-height: 250.203px; height: 250.203px; padding: 0px; transform: scale(0.6, 0.6);">
                                 <h6>
                                     <img src="assets/img/home-3/user.svg" alt="img">
                                   my featured projects
