--- a/index.html
+++ b/index.html
@@ -1151,14 +1151,15 @@
                     </div>
                 </div>
                 <div class="footer-bottom wow fadeInUp" data-wow-delay=".3s">
-                    <p>Copyright © <span>Gramentheme</span></p>
-                    <a href="index.html" class="footer-logo"><img src="assets/img/logo/white-icon.svg" alt="img"></a>
+                    <p>Designed by <span>Ahmed Djebbara</span></p>
+                
+                    <a href="index.html" class="footer-logo">
+                        <img src="assets/img/logo/white-icon.svg" alt="Logo" width="150" height="31">
+                    </a>
+                
                     <ul>
                         <li>
-                            <a href="contact.html">Terms & Conditions</a>
-                        </li>
-                        <li>
-                            <a href="contact.html">Privacy Policy</a>
+                            <a href="contact.html">Get in Touch</a>
                         </li>
                     </ul>
                 </div>
