--- a/contact.html
+++ b/contact.html
@@ -427,9 +427,7 @@
 
         <!-- Footer Section Start -->
         <footer class="footer-section fix">
-            <div class="like-shape">
-              <img src="assets/img/home-2/like.png" alt="img" class="hide-img">
-            </div>
+            <div class="like-shape"></div>
             <div class="footer-wrapper-2">
                 <div class="container">
                     <a href="index.html" class="footer-logo">
