--- a/index.html
+++ b/index.html
@@ -1159,7 +1159,10 @@
                 
                     <ul>
                         <li>
-                            <a href="contact.html">Get in Touch</a>
+                            <a href="contact.html"
+                               style="display:inline-flex; align-items:center; justify-content:center; width:231.7px; height:28.01px;">
+                              Get in Touch
+                            </a>
                         </li>
                     </ul>
                 </div>
