--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <img src="assets/img/home-1/hero/info.png" alt="img">
                         <span>
                             trusted clients <br>
-                            world wide
+                            and partners
                         </span>
                     </div>
                     <div class="vec-shape float-bob-x">
@@ -1023,7 +1023,7 @@
         <div class="brand-section section-padding">
             <div class="container">
                 <div class="brand-text">
-                    <p>worldwide <b>valuable clients</b></p>
+                    <p>High Value<b>clients</b></p>
                 </div>
                 <div class="row g-3 g-xl-5">
                     <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6">
