--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@
                             <a href="service.html">SERVICES</a>
                         </li>
                         <li>
-                            <a href="https://www.behance.net/ahmeddjebbara">PORTFOLIO</a>
+                            <a href="project.html">PORTFOLIO</a>
                         </li>
                         <li>
                             <a href="contact.html">CONTACT ME</a>
