--- a/index.html
+++ b/index.html
@@ -399,7 +399,8 @@
                                 </p>
                                 <div class="about-btn wow fadeInUp" data-wow-delay=".7s">
                                     <a href="about.html" class="theme-btn">get to know me <i class="fa-solid fa-arrow-up-right"></i></a>
-                                    <a href="contact.html" class="theme-btn">download cv <i class="fa-solid fa-arrow-up-right"></i></a>
+                                    <a href="files/ahmed-cv.pdf" class="theme-btn" download> Download CV <i class="fa-solid fa-arrow-up-right"></i>
+                                    </a>
                                 </div>
                             </div>
                         </div>
