--- a/about.html
+++ b/about.html
@@ -226,7 +226,8 @@
                                 - Masterful Execution
                             </li>
                         </ul>
-                        <a href="project.html" class="theme-btn">let’s talk about project <i class="fa-solid fa-arrow-up-right"></i></a>
+                        <a href="assets/files/Ahmed-CV.pdf" class="theme-btn" download=""> Download CV <i class="fa-solid fa-arrow-up-right"></i>
+                        </a>
                     </div>
                     <div class="approach-wrap-items">
                             <h3 class="text_invert-2">
