--- a/about.html
+++ b/about.html
@@ -747,76 +747,85 @@
             
         </section>
         <!-- Project Section Start -->
-        <section class="project-section-3 fix section-padding pt-0">
-            <div class="pin-spacer" style="order: 0; place-self: auto; grid-area: auto; z-index: auto; float: none; flex-shrink: 1; display: block; margin: 0px; inset: auto; position: relative; flex-basis: auto; overflow: visible; box-sizing: border-box; width: 100%; height: 250px; padding: 0px;"><div class="section-title-2 mb-0 text-center tp-project-5-2-title" style="translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit; inset: 0px auto auto 0px; margin: 0px; max-width: 100%; width: 100%; max-height: 250.203px; height: 250.203px; padding: 0px; transform: scale(0.6, 0.6);">
-                <h6>
-                    <img src="assets/img/home-3/user.svg" alt="img">
-                  my Expert Credentials
-                </h6>
-                <h3 class="prtoject-title">
-                  Certifications
-                </h3>
-                    <div class="line-ani">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="424" height="15" viewBox="0 0 424 15" fill="none">
-                    <path class="arrow-path" d="M0 1H423L26.8244 14H346.654" stroke="#BFF747" stroke-width="2" stroke-linejoin="round"></path>
-                    </svg>
-                </div>
-            </div></div>
-            <div class="swiper project-inner-slider">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="project-inner-image">
-                            <img src="assets/img/project/project-01.jpg" alt="img">
-                            <div class="content">
-                                <p>App / Development </p>
-                                    <h3><a href="project-details.html">Online Learning Platform</a></h3>
-                                </div>
-                            <a href="project-details.html" class="circle-icon">
-                                <i class="fa-solid fa-arrow-up-right"></i>
-                            </a>
-                        </div>
+        <section class="project-section-555 section-padding fix">
+            <div class="container">
+                <div class="section-title-area">
+                    <div class="section-title">
+                        <h2>my Expert Credentials</h2>
                     </div>
-                     <div class="swiper-slide">
-                        <div class="project-inner-image">
-                            <img src="assets/img/project/project-02.jpg" alt="img">
-                            <div class="content">
-                                <p>App / Development </p>
-                                    <h3><a href="project-details.html">Online Learning Platform</a></h3>
-                                </div>
-                            <a href="project-details.html" class="circle-icon">
-                                <i class="fa-solid fa-arrow-up-right"></i>
-                            </a>
-                        </div>
-                    </div>
-                     <div class="swiper-slide">
-                        <div class="project-inner-image">
-                            <img src="assets/img/project/project-03.jpg" alt="img">
-                            <div class="content">
-                                <p>App / Development </p>
-                                    <h3><a href="project-details.html">Online Learning Platform</a></h3>
-                                </div>
-                            <a href="project-details.html" class="circle-icon">
-                                <i class="fa-solid fa-arrow-up-right"></i>
-                            </a>
-                        </div>
-                    </div>
-                     <div class="swiper-slide">
-                        <div class="project-inner-image">
-                            <img src="assets/img/project/project-04.jpg" alt="img">
-                            <div class="content">
-                                <p>App / Development </p>
-                                    <h3><a href="project-details.html">Online Learning Platform</a></h3>
-                                </div>
-                            <a href="project-details.html" class="circle-icon">
-                                <i class="fa-solid fa-arrow-up-right"></i>
-                            </a>
-                        </div>
+                     <div class="array-button">
+                        <button class="array-prev" tabindex="0" aria-label="Next slide" aria-controls="swiper-wrapper-25ff34c1e12d87bc"><i class="fa-solid fa-arrow-left"></i></button>
+                        <button class="array-next" tabindex="0" aria-label="Previous slide" aria-controls="swiper-wrapper-25ff34c1e12d87bc"><i class="fa-solid fa-arrow-right"></i></button>
                     </div>
                 </div>
+                <div class="swiper project-slider-555 swiper-initialized swiper-horizontal swiper-pointer-events swiper-backface-hidden">
+                    <div class="swiper-wrapper" id="swiper-wrapper-25ff34c1e12d87bc" aria-live="off" style="transition-duration: 0ms; transform: translate3d(-1815px, 0px, 0px);"><div class="swiper-slide swiper-slide-duplicate" style="width: 423.75px; margin-right: 30px;" role="group" aria-label="1 / 2" data-swiper-slide-index="0">
+                            <div class="project-box-items-555">
+                                <div class="thumb">
+                                    <img src="assets/img/inner/project-details/project-01.jpg" alt="img">
+                                </div>
+                                <div class="content">
+                                    <p>brochure</p>
+                                    <h3><a href="project-details.html">brochure print design</a></h3>
+                                </div>
+                            </div>
+                        </div><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-prev" style="width: 423.75px; margin-right: 30px;" role="group" aria-label="2 / 2" data-swiper-slide-index="1">
+                            <div class="project-box-items-555">
+                                <div class="thumb">
+                                    <img src="assets/img/inner/project-details/project-02.jpg" alt="img">
+                                </div>
+                                <div class="content">
+                                    <p>brochure</p>
+                                    <h3><a href="project-details.html">brochure print design</a></h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide swiper-slide-duplicate-active" style="width: 423.75px; margin-right: 30px;" role="group" aria-label="1 / 2" data-swiper-slide-index="0">
+                            <div class="project-box-items-555">
+                                <div class="thumb">
+                                    <img src="assets/img/inner/project-details/project-01.jpg" alt="img">
+                                </div>
+                                <div class="content">
+                                    <p>brochure</p>
+                                    <h3><a href="project-details.html">brochure print design</a></h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide swiper-slide-prev swiper-slide-duplicate-next" style="width: 423.75px; margin-right: 30px;" role="group" aria-label="2 / 2" data-swiper-slide-index="1">
+                            <div class="project-box-items-555">
+                                <div class="thumb">
+                                    <img src="assets/img/inner/project-details/project-02.jpg" alt="img">
+                                </div>
+                                <div class="content">
+                                    <p>brochure</p>
+                                    <h3><a href="project-details.html">brochure print design</a></h3>
+                                </div>
+                            </div>
+                        </div>
+                    <div class="swiper-slide swiper-slide-duplicate swiper-slide-active" style="width: 423.75px; margin-right: 30px;" role="group" aria-label="1 / 2" data-swiper-slide-index="0">
+                            <div class="project-box-items-555">
+                                <div class="thumb">
+                                    <img src="assets/img/inner/project-details/project-01.jpg" alt="img">
+                                </div>
+                                <div class="content">
+                                    <p>brochure</p>
+                                    <h3><a href="project-details.html">brochure print design</a></h3>
+                                </div>
+                            </div>
+                        </div><div class="swiper-slide swiper-slide-duplicate swiper-slide-next swiper-slide-duplicate-prev" style="width: 423.75px; margin-right: 30px;" role="group" aria-label="2 / 2" data-swiper-slide-index="1">
+                            <div class="project-box-items-555">
+                                <div class="thumb">
+                                    <img src="assets/img/inner/project-details/project-02.jpg" alt="img">
+                                </div>
+                                <div class="content">
+                                    <p>brochure</p>
+                                    <h3><a href="project-details.html">brochure print design</a></h3>
+                                </div>
+                            </div>
+                        </div></div>
+                <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
             </div>
         </section>
-
-
         <!-- Award Winning Section Start -->
         <!-- Footer Section Start -->
         <footer class="footer-section fix">
