--- a/about.html
+++ b/about.html
@@ -765,8 +765,8 @@
                                     <img src="assets/img/inner/project-details/project-01.jpg" alt="img">
                                 </div>
                                 <div class="content">
-                                    <p>brochure</p>
-                                    <h3><a href="project-details.html">brochure print design</a></h3>
+                                    <p>certificate</p>
+                                    <h3><a href="project-details.html">Adobe Graphic Designer course</a></h3>
                                 </div>
                             </div>
                         </div><div class="swiper-slide swiper-slide-duplicate swiper-slide-duplicate-prev" style="width: 423.75px; margin-right: 30px;" role="group" aria-label="2 / 2" data-swiper-slide-index="1">
@@ -775,30 +775,30 @@
                                     <img src="assets/img/inner/project-details/project-02.jpg" alt="img">
                                 </div>
                                 <div class="content">
-                                    <p>brochure</p>
-                                    <h3><a href="project-details.html">brochure print design</a></h3>
+                                    <p>certificate</p>
+                                    <h3><a href="project-details.html">The Ultimate Adobe Illustrator CC Fundamental Course</a></h3>
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide swiper-slide-duplicate-active" style="width: 423.75px; margin-right: 30px;" role="group" aria-label="1 / 2" data-swiper-slide-index="0">
                             <div class="project-box-items-555">
                                 <div class="thumb">
-                                    <img src="assets/img/inner/project-details/project-01.jpg" alt="img">
+                                    <img src="assets/img/inner/project-details/project-03.jpg" alt="img">
                                 </div>
                                 <div class="content">
-                                    <p>brochure</p>
-                                    <h3><a href="project-details.html">brochure print design</a></h3>
+                                    <p>certificate</p>
+                                    <h3><a href="project-details.html">Image Editing course</a></h3>
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide swiper-slide-prev swiper-slide-duplicate-next" style="width: 423.75px; margin-right: 30px;" role="group" aria-label="2 / 2" data-swiper-slide-index="1">
                             <div class="project-box-items-555">
                                 <div class="thumb">
-                                    <img src="assets/img/inner/project-details/project-02.jpg" alt="img">
+                                    <img src="assets/img/inner/project-details/project-04.jpg" alt="img">
                                 </div>
                                 <div class="content">
-                                    <p>brochure</p>
-                                    <h3><a href="project-details.html">brochure print design</a></h3>
+                                    <p>certificate</p>
+                                    <h3><a href="project-details.html">Packaging Design course</a></h3>
                                 </div>
                             </div>
                         </div>
@@ -808,7 +808,7 @@
                                     <img src="assets/img/inner/project-details/project-01.jpg" alt="img">
                                 </div>
                                 <div class="content">
-                                    <p>brochure</p>
+                                    <p>certificate</p>
                                     <h3><a href="project-details.html">brochure print design</a></h3>
                                 </div>
                             </div>
@@ -818,7 +818,7 @@
                                     <img src="assets/img/inner/project-details/project-02.jpg" alt="img">
                                 </div>
                                 <div class="content">
-                                    <p>brochure</p>
+                                    <p>certificate</p>
                                     <h3><a href="project-details.html">brochure print design</a></h3>
                                 </div>
                             </div>
