--- a/about.html
+++ b/about.html
@@ -948,10 +948,7 @@
                     </div>
                         <ul>
                             <li>
-                                <p>© 2026.</p>
-                            </li>
-                            <li>
-                                <p>All rights reserved</p>
+                                <p>© 2026. All rights reserved</p>
                             </li>
                         </ul>
                     </div>
