--- a/index.html
+++ b/index.html
@@ -1134,22 +1134,22 @@
                     </ul>
                     <div class="icon-items-area">
                         <div class="icon-items">
-                            <a href="#" class="icon">
+                            <a href="https://www.facebook.com/ahmed.djb2" class="icon">
                                 <i class="fa-brands fa-facebook-f"></i>
                             </a>
-                            <a href="#">Facebook</a>
+                            <a href="https://www.facebook.com/ahmed.djb2">Facebook</a>
                         </div>
                         <div class="icon-items">
-                            <a href="#" class="icon">
-                                <i class="fa-brands fa-instagram"></i>
-                            </a>
-                            <a href="#">instagram</a>
-                        </div>
-                        <div class="icon-items">
-                            <a href="#" class="icon">
+                            <a href="https://www.linkedin.com/in/ahmed-djebbara/" class="icon">
                                 <i class="fa-brands fa-linkedin-in"></i>
                             </a>
-                            <a href="#">Linkedin</a>
+                            <a href="https://www.linkedin.com/in/ahmed-djebbara/">Linkedin</a>
+                        </div>
+                        <div class="icon-items">
+                            <a href="https://www.behance.net/ahmeddjebbara" class="icon">
+                                <i class="fa-brands fa-behance"></i>
+                            </a>
+                            <a href="https://www.behance.net/ahmeddjebbara">behance</a>
                         </div>
                     </div>
                 </div>
