--- a/about.html
+++ b/about.html
@@ -352,11 +352,11 @@
                     </h2>
                 </div>
 <!--------------------------------------------------------------------------------->
-                <div class="array-button">
-                    <button class="array-prev" aria-label="Next slide" tabindex="0" aria-controls="swiper-wrapper-8be4c267ea26acca" aria-disabled="false">
+                <div class="expertise-button">
+                    <button class="expertise-prev" aria-label="Next slide" tabindex="0" aria-controls="swiper-wrapper-8be4c267ea26acca" aria-disabled="false">
                         <i class="fa-solid fa-arrow-left"></i>
                     </button>
-                    <button class="array-next" aria-label="Previous slide" tabindex="0" aria-controls="swiper-wrapper-8be4c267ea26acca" aria-disabled="false">
+                    <button class="expertise-next" aria-label="Previous slide" tabindex="0" aria-controls="swiper-wrapper-8be4c267ea26acca" aria-disabled="false">
                         <i class="fa-solid fa-arrow-right"></i>
                     </button>
                 </div>
