--- a/about.html
+++ b/about.html
@@ -431,12 +431,12 @@
                                             <img src="assets/img/home-1/work-experience/info-1.png" alt="img">
                                         </div>
                                         <div class="info-content">
-                                            <h3>ABC Tech Ltd</h3>
-                                            <span>Jan 2022 – Present</span>
+                                            <h3>sarl biscuiterie sai</h3>
+                                            <span>Oct 2025 – Present</span>
                                         </div>
                                     </div>
                                     <div class="info-item">
-                                        <h5>UI/UX Designer</h5>
+                                        <h5>senior graphic designer</h5>
                                         <div class="text-cont">
                                             <p class="mb-4">
                                                 Designed 20+ mobile and web app interfaces using Figma & Adobe XD.
@@ -455,12 +455,12 @@
                                             <img src="assets/img/home-1/work-experience/info-2.png" alt="img">
                                         </div>
                                         <div class="info-content">
-                                            <h3>ABC2 Tech Ltd</h3>
-                                            <span>Jan 2022 – Present</span>
+                                            <h3>Groupe Labelle</h3>
+                                            <span>Jun 2025 – SEP 2025</span>
                                         </div>
                                     </div>
                                     <div class="info-item">
-                                        <h5>UI/UX Designer</h5>
+                                        <h5>senior graphic designer</h5>
                                         <div class="text-cont">
                                             <p class="mb-4">
                                                 Designed 20+ mobile and web app interfaces using Figma & Adobe XD.
@@ -479,12 +479,12 @@
                                             <img src="assets/img/home-1/work-experience/info-3.png" alt="img">
                                         </div>
                                         <div class="info-content">
-                                            <h3>ABC3 Tech Ltd</h3>
-                                            <span>Jan 2022 – Present</span>
+                                            <h3>eurl wesselni</h3>
+                                            <span>Dec 2024 – Jun 2025</span>
                                         </div>
                                     </div>
                                     <div class="info-item">
-                                        <h5>UI/UX Designer</h5>
+                                        <h5>senior graphic designer</h5>
                                         <div class="text-cont">
                                             <p class="mb-4">
                                                 Designed 20+ mobile and web app interfaces using Figma & Adobe XD.
@@ -503,12 +503,12 @@
                                             <img src="assets/img/home-1/work-experience/info-4.png" alt="img">
                                         </div>
                                         <div class="info-content">
-                                            <h3>ABC4 Tech Ltd</h3>
-                                            <span>Jan 2022 – Present</span>
+                                            <h3>Brainstorms</h3>
+                                            <span>Nov 2023 – Dec 2024</span>
                                         </div>
                                     </div>
                                     <div class="info-item">
-                                        <h5>UI/UX Designer</h5>
+                                        <h5>Co-Founder & Senior Graphic Designer</h5>
                                         <div class="text-cont">
                                             <p class="mb-4">
                                                 Designed 20+ mobile and web app interfaces using Figma & Adobe XD.
@@ -527,12 +527,12 @@
                                             <img src="assets/img/home-1/work-experience/info-5.png" alt="img">
                                         </div>
                                         <div class="info-content">
-                                            <h3>ABC49 Tech Ltd</h3>
-                                            <span>Jan 2022 – Present</span>
+                                            <h3>Ebox dz</h3>
+                                            <span>May 2023 – Dec 2024</span>
                                         </div>
                                     </div>
                                     <div class="info-item">
-                                        <h5>UI/UX Designer</h5>
+                                        <h5>graphic designer</h5>
                                         <div class="text-cont">
                                             <p class="mb-4">
                                                 Designed 20+ mobile and web app interfaces using Figma & Adobe XD.
@@ -556,7 +556,7 @@
                                         </div>
                                     </div>
                                     <div class="info-item">
-                                        <h5>UI/UX Designer</h5>
+                                        <h5>frelancer</h5>
                                         <div class="text-cont">
                                             <p class="mb-4">
                                                 Designed 20+ mobile and web app interfaces using Figma & Adobe XD.
